kubernetes/prometheus/network.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingress-cluster
  servers:
  - port:
      number: 9090
      name: http
      protocol: HTTP
    hosts:
    - "cluster.codedesignplus.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtualservice
  namespace: monitoring
spec:
  hosts:
  - "cluster.codedesignplus.com"
  gateways:
  - prometheus-gateway
  http:
  - route:
    - destination:
        host: prometheus-server.monitoring.svc.cluster.local
        port:
          number: 80
    rewrite:
      uri: "/"
